# qbraid-qir

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-version.yml  docs.yml  format.yml  gh-pages.yml  main.yml  pre-release.yml  publish.yml
docker/linux-amd64/: Dockerfile  README.md  build.sh  exec.sh  run.sh
docker/linux-amd64/examples/: cirq_bell.py  qasm3_bell.py
docs/: conf.py  index.md  index.rst  requirements.txt
docs/api/: qbraid_qir.autoqasm.rst  qbraid_qir.cirq.md  qbraid_qir.cirq.rst  qbraid_qir.md  qbraid_qir.qasm3.md  qbraid_qir.qasm3.rst  qbraid_qir.qiskit.rst  qbraid_qir.rst  qbraid_qir.runner.md  qbraid_qir.runner.rst  qbraid_qir.squin.rst
docs/stubs/: qbraid_qir.QirConversionError.rst  qbraid_qir.cirq.cirq_to_qir.rst
docs/userguide/: cirq_qir.md  cirq_qir.rst  overview.rst  qasm3_qir.md  qasm3_qir.rst  qasm3_supported.md  qasm3_supported.rst
examples/: autoqasm_deutsch_jozsa.ipynb  microsoft_resource_estimatation.ipynb  qbraid-autoqasm-poc.ipynb  qbraid_transpiler_braket_to_qir.ipynb  rigetti_qvm_sim.ipynb
images/: README.md
images/testing/: README.md
qbraid_qir/: __init__.py  _pyqir_compat.py  _version.py  exceptions.py  module.py  serialization.py  visitor.py
qbraid_qir/autoqasm/: __init__.py  convert.py  exceptions.py
qbraid_qir/cirq/: QIRTargetGateSet.py  __init__.py  conversions.py  convert.py  elements.py  exceptions.py  generator.py  opsets.py  passes.py  qir_target_gateset.py  rohantest.py  visitor.py
qbraid_qir/profiles/: __init__.py  abstract.py  base_execution.json  base_profile_template.json  core.py
qbraid_qir/qasm3/: README.md  __init__.py  adaptive_support.py  analyser.py  analyzer.py  checker.py  convert.py  elements.py  exceptions.py  expressions.py  linalg.py  maps.py  oq3_maps.py  preprocess.py  subroutines.py  test3.py  transformer.py  validator.py  visitor.py  visitor_utils.py
qbraid_qir/qasm3/profiles/: __init__.py  adaptive_execution.json  adaptive_profile_template.json  core.py
qbraid_qir/qasm3/tests/: pyqasm_version.py  test1.py  test2.py
qbraid_qir/qasm3/utils/: expressions.py  imports.py  maps.py  visitor_utils.py
qbraid_qir/qiskit/: __init__.py  convert.py  elements.py  exceptions.py  maps.py  visitor.py
qbraid_qir/runner/: __init__.py  exceptions.py  result.py  simulator.py  sparse_simulator.py
qbraid_qir/sim/: sparse_simulator.py
qbraid_qir/squin/: __init__.py  example.ipynb  exceptions.py  maps.py  visitor.py
src/cirq-qir/: README.md  pyproject.toml
src/cirq-qir/cirq_qir/: __init__.py  convert.py  elements.py  exceptions.py  opsets.py  visitor.py
src/cirq-qir/tests/: qir_utils.py  test_cirq_decompose.py  test_cirq_module.py  test_cirq_preprocess.py  test_cirq_to_qir.py
src/cirq-qir/tests/resources/: test_qir_bell.ll
test-containers/: README.md
test-containers/qir_runner/: Dockerfile  build.sh  get-wheel.sh
tests/: conftest.py  qir_utils.py  test_cirq_decompose.py  test_cirq_module.py  test_cirq_preprocess.py  test_cirq_to_qir.py  test_preprocess.py  test_serialization.py  test_utils.py  utils.py
tests/autoqasm_qir/: test_convert.py
tests/cirq_qir/: basic_gates.py  conftest.py  test_cirq_decompose.py  test_cirq_module.py  test_cirq_preprocess.py  test_cirq_to_qir.py  test_conversions.py  test_serialization.py
tests/cirq_qir/fixtures/: basic_gates.py  cirq_circuits.py  pyqir_circuits.py
tests/cirq_qir/resources/: test_conditional_gates.ll  test_conditional_gates_opaque.ll  test_qir_bell_cirq_opaque.ll  test_qir_bell_cirq_typed.ll  test_qir_bell_opaque.ll
tests/fixtures/: __init__.py  basic_gates.py  cirq_circuits.py  pyqir_circuits.py
tests/qasm3_qir/: conftest.py  test_checker.py  test_convert.py  test_linalg.py  test_maps.py  test_qasm3_to_qir.py
tests/qasm3_qir/autoqasm/: test_convert.py
tests/qasm3_qir/converter/: test_adaptive.py  test_alias.py  test_barrier.py  test_declarations.py  test_expressions.py  test_gates.py  test_if.py  test_loop.py  test_measurement.py  test_physical_qubits.py  test_quantum_decl.py  test_reset.py  test_sizeof.py  test_subroutine.py  test_subroutine_arrays.py  test_switch.py
tests/qasm3_qir/converter/declarations/: test_classical.py  test_quantum.py
tests/qasm3_qir/fixtures/: basic_gates.py  gates.py  subroutines.py  variables.py
tests/qasm3_qir/fixtures/resources/: complex_if.ll  complex_if_opaque.ll  complex_if_typed.ll  custom_gate_complex.qasm  custom_gate_nested.qasm  custom_gate_simple.qasm  simple_if.ll  simple_if_opaque.ll  simple_if_typed.ll
tests/qiskit_qir/: __init__.py  conftest.py  test_basic_gates.py  test_complex_circuits.py  test_qiskit_to_qir.py
tests/resources/: test_conditional_gates.ll  test_qir_bell.ll
tests/runner/: test_result.py  test_runner.py  test_simulator.py
tests/squin_qir/: test_cudaq_to_squin.py  test_error_handlers.py  test_qir_to_squin.py
tests/squin_qir/resources/: bell_pair.ll  ghz_4.bc
tools/: create_dev_build.sh  stamp_dev_version.sh  verify_headers.py
