[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbraid-qir"
dynamic = ["version"]
description = "qBraid-SDK extension providing support for QIR conversions."
readme = "README.md"
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
license = {text = "GNU General Public License v3.0"}
keywords = ["qbraid", "quantum", "qir", "llvm", "cirq", "openqasm"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = ["pyqir>=0.10.0,<0.11.0", "numpy"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/qBraid/qbraid-qir"
Documentation = "https://docs.qbraid.com/qir"
"Bug Tracker" = "https://github.com/qBraid/qbraid-qir/issues"
Discord = "https://discord.gg/TPBU2sa8Et"
"Launch on Lab" = "https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qbraid-qir.git"

[project.optional-dependencies]
cirq = ["cirq-core>=1.3.0,<1.5.0"]
qasm3 = ["openqasm3[parser]>=0.4.0,<1.1.0"]
test = ["qbraid>=0.7.1,<0.8.0", "pytest", "pytest-cov", "autoqasm>=0.1.0"]
lint = ["black[jupyter]", "isort", "pylint", "qbraid-cli>=0.8.3"]
docs = ["sphinx>=7.3.7,<8.1.0", "sphinx-autodoc-typehints>=1.24,<2.3", "sphinx-rtd-theme~=2.0.0", "docutils<0.22", "sphinx-copybutton"]

[tool.setuptools.dynamic]
version = {attr = "qbraid_qir.__version__"}

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "C0103, C0115, C0116, I1101, R0903, W0212, W0511"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.coverage.report]
exclude_lines = [
  "pass",
  "raise NotImplementedError",
  "return NotImplemented",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "logger.debug"
]

[tool.coverage.run]
parallel = true
source = ["qbraid_qir"]
omit = [
  "**/qbraid_qir/__init__.py"
]
