[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbraid-qir"
dynamic = ["version"]
description = "qBraid-SDK extension providing support for QIR conversions."
readme = "README.md"
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
license = {text = "GNU General Public License v3.0"}
keywords = ["qbraid", "quantum", "qir", "llvm", "cirq", "openqasm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = ["pyqir>=0.10.0,<0.11.0"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/qBraid/qbraid-qir"
Documentation = "https://docs.qbraid.com/qir"
"Bug Tracker" = "https://github.com/qBraid/qbraid-qir/issues"
Discord = "https://discord.gg/TPBU2sa8Et"
"Launch on Lab" = "https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qbraid-qir.git"

[project.optional-dependencies]
cirq = ["cirq-core>=1.3.0,<1.5.0"]
qasm3 = ["pyqasm>=0.1.0,<0.2.0", "numpy"]
test = ["qbraid>=0.8.3,<0.10.0", "pytest", "pytest-cov", "autoqasm>=0.1.0"]
lint = ["black", "isort", "pylint", "qbraid-cli>=0.10.1"]
docs = ["sphinx>=7.3.7,<=8.3.0", "sphinx-autodoc-typehints>=1.24,<3.1", "sphinx-rtd-theme>=2.0,<3.1", "docutils<0.22", "sphinx-copybutton"]

[tool.setuptools]
packages = ["qbraid_qir", "qbraid_qir.cirq", "qbraid_qir.qasm3"]

[tool.setuptools.dynamic]
version = {attr = "qbraid_qir.__version__"}

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "C0103, C0115, C0116, I1101, R0903, R0917, W0212, W0511"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.coverage.report]
exclude_lines = [
  "pass",
  "raise NotImplementedError",
  "return NotImplemented",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "logger.debug"
]

[tool.coverage.run]
parallel = true
source = ["qbraid_qir"]
omit = [
  "**/qbraid_qir/__init__.py"
]
