[metadata]
name = qbraid-qir
license = GPL v3.0
author = qBraid Development Team
author_email = contact@qbraid.com
description = qBraid-SDK extension providing support for QIR conversions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = qbraid, quantum
url = https://www.qbraid.com/
project_urls =
    Documentation = https://docs.qbraid.com/en/latest/
    Bug Tracker = https://github.com/qBraid/qbraid-qir/issues
    Source Code = https://github.com/qBraid/qbraid-qir
    Discord = https://discord.gg/TPBU2sa8Et
    Launch on Lab = https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qbraid-qir.git
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.9
